# actix-kafka-redis

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
