[package]
name = "actix-kafka-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.9.0"
redis = { version = "0.27.4", features = ["aio", "tokio-comp"] }
rdkafka = "0.36.2"
async-trait = "0.1.83"
